--- a/nutrIApp.de/MainPage.xaml
+++ b/nutrIApp.de/MainPage.xaml
@@ -1,36 +1,57 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="nutrIApp.de.MainPage">
+<ContentPage 
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class="nutrIApp.de.MainPage">
 
     <ScrollView>
+
         <VerticalStackLayout
             Padding="30,0"
             Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
 
             <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+                Text="Local AI recommendations"
+                SemanticProperties.HeadingLevel="Level1"
+                FontSize="32"
+                HorizontalOptions="Center"/>
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+            <Entry
+                x:Name="LocationEntry"
+                Placeholder="Enter your location"
+                SemanticProperties.Hint="Enter the location for recommendations"
+                HorizontalOptions="Center"/>
+                
+            <Button
+                x:Name="RestaurantBtn"
+                Text="Get restaurant recommendations"
+                SemanticProperties.Hint="Gets restaurant recommendations when you click"
+                Clicked="OnRestaurantClicked"
+                HorizontalOptions="Center"/>
 
             <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+                x:Name="HotelBtn"
+                Text="Get hotel recommendations"
+                SemanticProperties.Hint="Gets hotel recommendations when you click"
+                Clicked="OnHotelClicked"
+                HorizontalOptions="Center"/>
+
+            <Button
+                x:Name="AttractionBtn"
+                Text="Get attraction recommendations"
+                SemanticProperties.Hint="Gets attraction recommendations when you click"
+                Clicked="OnAttractionClicked"
+                HorizontalOptions="Center"/>
+
+            <Label 
+                x:Name="SmallLabel"
+                Text="Click a button for recommendations!"
+                SemanticProperties.HeadingLevel="Level2"
+                FontSize="18"
+                HorizontalOptions="Center"/>
+
         </VerticalStackLayout>
+
     </ScrollView>
 
 </ContentPage>
