--- a/nutrIApp.de/Resources/Styles/Colors.xaml
+++ b/nutrIApp.de/Resources/Styles/Colors.xaml
@@ -6,6 +6,9 @@
 
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
 
+    <Color x:Key="1">#365564</Color>
+    <Color x:Key="2">#ed7331</Color>
+
     <Color x:Key="Primary">#512BD4</Color>
     <Color x:Key="PrimaryDark">#ac99ea</Color>
     <Color x:Key="PrimaryDarkText">#242424</Color>
