--- a/nutrIApp.de/Resources/Styles/Styles.xaml
+++ b/nutrIApp.de/Resources/Styles/Styles.xaml
@@ -398,7 +398,7 @@
         <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource OffBlack}}" />
     </Style>
 
-    <Style TargetType="Shell" ApplyToDerivedTypes="True">
+    <!-- <Style TargetType="Shell" ApplyToDerivedTypes="True">
         <Setter Property="Shell.BackgroundColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource OffBlack}}" />
         <Setter Property="Shell.ForegroundColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource SecondaryDarkText}}" />
         <Setter Property="Shell.TitleColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource SecondaryDarkText}}" />
@@ -409,6 +409,40 @@
         <Setter Property="Shell.TabBarForegroundColor" Value="{AppThemeBinding Light={StaticResource Magenta}, Dark={StaticResource White}}" />
         <Setter Property="Shell.TabBarTitleColor" Value="{AppThemeBinding Light={StaticResource Magenta}, Dark={StaticResource White}}" />
         <Setter Property="Shell.TabBarUnselectedColor" Value="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource Gray200}}" />
+    </Style> -->
+
+    <Style 
+        TargetType="Shell"
+        ApplyToDerivedTypes="True">
+
+        <Setter
+            Property="Shell.BackgroundColor"
+            Value="{StaticResource 1}"/>
+
+        <Setter
+            Property="Shell.ForegroundColor"
+            Value="{StaticResource White}"/>
+
+        <Setter
+            Property="Shell.TitleColor"
+            Value="{StaticResource White}"/>
+
+        <Setter
+            Property="Shell.NavBarHasShadow"
+            Value="False"/>
+
+        <Setter
+            Property="Shell.TabBarBackgroundColor"
+            Value="{StaticResource 1}"/>
+
+        <Setter
+            Property="Shell.TabBarForegroundColor"
+            Value="{StaticResource White}"/>
+
+        <Setter
+            Property="Shell.TabBarTitleColor"
+            Value="{StaticResource White}"/>
+
     </Style>
 
     <Style TargetType="NavigationPage">
